--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'JaCoCo'
+    summaryFileLocation: '$(SystemDefaultWorkingDirectory)/**/site/jacoco/jacoco.xml'
+    reportDirectory: '$(SystemDefaultWorkingDirectory)/**/site/jacoco/'
+    failIfCoverageEmpty: true
