--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,6 @@ steps:
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: 'JaCoCo'
-    summaryFileLocation: '$(SystemDefaultWorkingDirectory)/**/site/jacoco/jacoco.xml'
-    reportDirectory: '$(SystemDefaultWorkingDirectory)/**/site/jacoco/'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/site/jacoco/jacoco.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/site/jacoco/'
     failIfCoverageEmpty: true
